kubernetes-angular.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: angular
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  labels:
    name: angular
spec:
  selector:
    app: angular
  ports:
    - nodePort: 30003
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
