kubernetes-springboot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: springboot
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: springboot
---
apiVersion: v1
kind: Service
metadata:
  name: springboot
  labels:
    name: springboot
    app: springboot
    release: prometheus
spec:
  selector:
    app: springboot
  ports:
    - nodePort: 30002
      protocol: TCP
      port: 8080
      name: springboot
      targetPort: 8080
  type: NodePort
